compiler/test-data/parser/scheme/errors/invalid_instruction_syntax.frel
module scheme.errors.invalid_instruction_syntax

scheme User {
    name : String .. min_len 3
}
